# ghostloom-rpg

./: .dockerignore  .env.example  .gitignore  BIG_CHANGE.md  BIG_CHANGE_FLOWS.md  DEPLOYMENT.md  Dockerfile  Makefile  README.md  SETUP.md  TODO.md  deploy.sh  docker-compose.yml  env.example  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt
.cursor/: mcp.json
.github/workflows/: publish.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_narrative_characters.py
app/: __init__.py  character_templates.py  config.py  crypto.py  dependencies.py  llm_client.py  main.py  models.py  narrator.py  narrator_types.py
app/db/: __init__.py  models.py  session.py
app/models/: __init__.py  protocol.py  story.py
app/routers/: auth.py  characters.py  games.py  health.py  me.py  settings.py
app/schemas/: api_keys.py  auth.py  characters.py  games.py
app/services/: api_key_service.py  auth_service.py  character_service.py  crypto_service.py  dm_service.py  game_service.py  narrator_service.py  phase_service.py  story_loader.py  turn_service.py
bruno/Ghostloom/: Continue.bru  Health.bru  Init.bru  Login.bru  Register.bru  Step.bru  bruno.json
frontend/: Dockerfile  docker-entrypoint.sh  index.html  package.json  tsconfig.json
frontend/public/: config.js
frontend/src/: api.ts  main.ts  style.css
prompts/: exposition.md
src/: App.tsx  index.css
src/components/: Dashboard.tsx  LoginScreen.tsx  RPGGame.tsx
src/lib/: auth.tsx  gameLogic.test.ts  gameLogic.ts
supabase/: config.toml
tests/: conftest.py  test_auth.py
(+2 files in other folders)
