[project]
name = "ghostloom"
version = "2.0.0"
description = "Multiplayer narrative game service with PostgreSQL and BYOK"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "cryptography==41.0.7",
    "openai>=1.40.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg[binary]>=3.1.0",
    "bcrypt>=4.1.0",
    "httpx>=0.25.0,<0.28",
    "email-validator>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "ruff>=0.14.10",
    "pytest>=8.0.0",
]

[tool.ruff]
line-length = 120
